# modulor

./: .gitignore  AGENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rfc.yml
.github/workflows/: ci.yml  mcp-registry.yml  publish.yml
docs/: API.md  FORMAT.md  INTEROP.md  OPENSSF.md  PLUGINS.md  ROADMAP.md  api.json  document.schema.json
examples/: bracket.json  floorplan.json  parametric.json  urban.json  villa_savoye_concept.json  zaha.json
extensions/modulor-mech/: README.md  pyproject.toml
extensions/modulor-mech/modulor_mech/: __init__.py
extensions/modulor-mech/tests/: test_mech.py
integrations/: COOKBOOK.md  README.md  python-frameworks.md  tool-definitions.json  zh-cn.md
integrations/claude-code/modulor-plugin/: .mcp.json
integrations/codex/: AGENTS-snippet.md
integrations/cursor/: modulor.mdc
integrations/demos/: README.md  modulor_tool.py
integrations/mcp/: README.md
modulor/: __init__.py  cli.py  document.py  document.schema.json  engine.py  errors.py  expr.py  geometry.py  mcp_server.py  plugins.py  shapes.py
modulor/exporters/: dxf.py  ifc.py  mesh3d.py  svg.py
modulor/importers/: dxf.py
modulor/ops/: __init__.py  arch.py  blocks.py  doc_ops.py  draw2d.py  export_ops.py  model3d.py  param_ops.py  query.py  transform.py
modulor/render/: flatten.py  font.py  raster.py  render2d.py  render3d.py
modulor/viewer/: index.html  server.py
scripts/: api_dump.py  bench.py  export_tool_defs.py  fuzz.py
tests/: test_api_contract.py  test_baseline_ops.py  test_dxf_corpus.py  test_dxf_semantic.py  test_format.py  test_fuzz.py  test_ifc.py  test_integrations.py  test_nativecad.py  test_plugins.py
(+10 files in other folders)
