[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modulor-mech"
version = "0.1.0"
description = "Mechanical engineering ops for Modulor: involute spur gears (the official extension template)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["modulor>=0.7"]

[project.entry-points."modulor.plugins"]
mech = "modulor_mech"

[tool.setuptools.packages.find]
include = ["modulor_mech*"]
